welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: not a legal formal parameter
		case _ if ((you>=8 || date>=8) && (you>2 && date>2) => 2
                                               ^dateFashion:4: error: ')' expected but 'case' found.
		case _ if (you<=2 || date<=2) => 0
                ^