welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
	(you,date) match {
		case _ if ((you>=8 || date>=8) && (you>2 && date>2) => 2
		case _ if (you<=2 || date<=2) => 0
		case _ => 1 
	}
}
